--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- タイトルの設定 -->
     <title>PORTFOLIO</title>
     <!-- スタイルシート　link先 -->
-    <link rel="stylesheat" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- <
@@ -18,7 +18,7 @@
         ・h1タグとaタグとspanタグを使用します
      -->
      <header> 
-         <h1 class="block header">
+         <h1 class="block-header">
             <a href="">
                 <span class="color-green">P</span>ortfolio
             </a>
